--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,4 @@
 22/03/2011  Project name decided to be Gnonograms.
 				Project created on Google Code
 				Temporary icon designed
+				Files uploaded
