--- a/NEWS
+++ b/NEWS
@@ -7,3 +7,7 @@
 				Temporary icon designed
 				Files uploaded
 
+14/06/2011	Solver refined to the point that most puzzles are solved
+				Manual started
+				Interface essentially complete and stable
+				Still requires some integration work
