--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-
+21/06/2011	Added additional translated strings
 19/06/2011	Added facility to show time taken to solve puzzle manually. Small changes to manual.
 16/06/2011	New svg program icon designed. File-type icon created and integrated with desktop.  First tarball created and uploaded to |Google code
 
