Removed mallard manual and associated files and program lines

--- a/README
+++ b/README
@@ -11,7 +11,14 @@
     Please consult the INSTALL and COPYING files for more information.
 
 
-   Copyright
-	Jeremy Wootten <jeremywootten@gmail.com> 2010 - 2011
+	Copyright of program code:
+	Jeremy Wootten <jeremywootten@gmail.com> 2010 - 2011.  License GPLv2
 	except:
-	minver - Yorba Foundation 2009
+	minver - Yorba Foundation 2009 License. LGPLv2.1 or later
+
+	Copyright of icons in the icons directory:
+	Jeremy Wootten <jeremywootten@gmail.com> 2011.  License CC-BY-SA
+
+   Copyright of games as per displayed author:
+   Fido <dktcoding@gmail.com>. License to be ascertained
+   Mork <??>. License to be ascertained
