Small changes to attributions

--- a/THANKS
+++ b/THANKS
@@ -7,6 +7,6 @@ Hiroko Wootten
 Projects:
 Gtk/GLib
 Vala
-Shotwell (Makefile and other design ideas)
+Shotwell (Makefile, Configure, minver and other design ideas)
 Geany
 Pictogame (Puzzles in .pattern format)
