--- a/THANKS
+++ b/THANKS
@@ -10,3 +10,7 @@ Vala
 Shotwell (Makefile, Configure, minver and other design ideas)
 Geany
 Pictogame (Puzzles in .pattern format)
+
+Puzzles:
+Fido/Frederico Vera
+Martin Petricek
