--- a/INSTALL
+++ b/INSTALL
@@ -5,8 +5,8 @@
 	Requirements to compile from source:
 	build-essentials package (libc6-dev, gcc, g++, make, dpkg-dev)
 	libgtk2.0-dev package and dependencies
-	libgconf2-dev package and dependencies
-	valac package and dependencies
+	libgconf2-dev package and dependencies (unless using ./configure --nogconf option)
+	valac package and dependencies (unless using ./configure --novala option)
 
 	Put the tarball in a directory for which you have read/write and execute rights.
 
@@ -16,7 +16,11 @@
 
 	Type the following commands:
 
-    $ ./configure   (or to compile from the C source $ ./configure --novala)
+    $ ./configure
+    OR $ ./configure --novala (to compile from the C source without needing vala compiler)
+    OR $ ./configure --nogconf (to compile a version that does not use gconf to store settings)
+    OR $ ./configure --help (to see all possible options)
+
     $ make
 
     This compiles the source code and creates an executable 'gnonograms'.
