--- a/README
+++ b/README
@@ -19,11 +19,9 @@
 
 	Copyright of icons in the icons directory:
 	------------------------------------------
-	Jeremy Wootten <jeremywootten@gmail.com> 2011.  License CC-BY-SA
+	Jeremy Wootten <jeremywootten@gmail.com> 2011.  License GPLv2
 
 	Copyright of games as per displayed author:
 	-------------------------------------------
-	1/. Fido/Frederico Vera <dktcoding@gmail.com>. License: GPL
+	1/. Fido/Frederico Vera <dktcoding@gmail.com>. License: GPLv2
 
-	2/. Martin Petricek <martin@petricek.net> License: <http://kod-en.petricek.net/about.php>
-	(Similar to Creative Commons CC-BY-NC-ND/3.0) Used by kind permission.
