--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,15 @@
+Gnonograms version 0.9.2
+**************************
+20/Sep/2011	Fixed auto size bug (failure for extremely asymmetric grid)
+
 18/Sep/2011 Added Gnome help files (Mallard) files
 			Modified Makefile and configure to install them
 			Include target to build binary archive
 			Include configure option to turn off all Gnome desktop integration on install
 			Removed unused configure options
 
+Gnonograms version 0.9.1
+************************
 17/Sep/2011	Updated manual
 			Separate setting of save and load puzzle directories
 			Default save puzzle directory changed to user's home directory
@@ -12,7 +18,6 @@
 			Incorrect cells only shown while dialog open.
 			Changed proxy menu so that it works in Unity
 			Increased minimum valac version to 0.12
-			Version -> 0.9.1
 
 11/Sep/2011	Removed "moderately hard" and "almost impossible" puzzle directories
 			Corrected errors in Makefile install and uninstall targets.
