--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 
 Gnonograms version 0.9.2
 **************************
+01/Oct/2011	Move all default settings into Resources file.
 28/Sep/2011	Small tweaks
 24/Sep/2011	Fixed redo-undo bug
 			Extra validation of game and config files
