--- a/INSTALL
+++ b/INSTALL
@@ -1,12 +1,12 @@
 
-    Gnonograms Installation from Source
-    -----------------------------------
+  Gnonograms Installation from Source Archive (gnonograms-0.9.4.tar.gz)
+  -------------------------------------------------------------
 
 	Requirements to compile from source:
 	build-essentials package (libc6-dev, gcc, g++, make, dpkg-dev)
-	libgtk2.0-dev package and dependencies
-	libgconf2-dev package and dependencies (unless using ./configure --nogconf option)
-	valac package and dependencies (unless using ./configure --novala option)
+	libgtk2.0-dev (version >=2.12) package and dependencies
+	libgconf2-dev (version >=2.12) package and dependencies  (unless using ./configure --nogconf option)
+	valac (version >=0.12) package and dependencies
 
 	Put the tarball in a directory for which you have read/write and execute rights.
 
@@ -17,7 +17,6 @@
 	Type the following commands:
 
     $ ./configure
-    OR $ ./configure --novala (to compile from the C source without needing vala compiler)
     OR $ ./configure --nogconf (to compile a version that does not use gconf to store settings)
     OR $ ./configure --help (to see all possible options)
 
@@ -30,16 +29,23 @@
     To install the program on the desktop:
 	$ sudo make install
 
-    * By default, gnonogramsl will install under /usr  The configure script
+    * By default, gnonograms will install under /usr  The configure script
       can customize the prefix directory.  Run ./configure --help for
       instructions and other installation options.
 
     * You may need to execute "make install" as root (i.e. sudo make install)
       if installing to system directories.]
 
-    *If you wish to try gnonograms before installing it, you may execute it
+    * If you wish to try gnonograms before installing it, you may execute it
       directly from its build directory.
 
     Once installed, gnonograms will be available
 
+
+  Installation of Gnonograms binary-only archive (gnonograms-0.9.4-bin-ubuntu-11.10.tar.gz)
+  -----------------------------------------------------------------------------------------
+
+  This version is already compiled on Ubuntu 11.10 and is only intended to work on that distribution. It may well also work on other distributions with equivalent or later versions of Gtk+-2.0.
+
+  Extract the archive in to a user directory and run the "gnonograms" binary from that directory.
 
