Remove superfluous help files

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Gnonograms version 0.9.4
 **************************
+21/Dec/2011 Remove superfluous files and Javascript from html generated from Mallard help files
 17/Dec/2011 Fixed bug in game editor
 						Update INSTALL, README
 07/Dec/2011 Update manual
