--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ Gnonograms version 0.9.5
 						Code tidying and bug fixes
 						Disable spacebar activation of toolbar items to prevent accidental new game
 						Add confirm dialog on new game.
+07/Jan/2011 Prevent marking unknown cell
+						Prevent changing marked cell
 
 Gnonograms version 0.9.4
 **************************
