--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Gnonograms version 0.9.5
 **************************
+15/Jan/2011 Fill cells with patterns (incomplete - no choice of pattern)
 01/Jan/2011 Allow marking of cell and undoing back to that point (Press 'm' to mark and 'l' to return to last mark).
 						Increase maximum undoes to 1000.
 						Code tidying and bug fixes
@@ -7,6 +8,8 @@ Gnonograms version 0.9.5
 						Add confirm dialog on new game.
 07/Jan/2011 Prevent marking unknown cell
 						Prevent changing marked cell
+						Undo all errors feature
+						Changed "Author" to "Source" in puzzle information.
 
 Gnonograms version 0.9.4
 **************************
