--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Gnonograms version 0.9.5
 **************************
+16/Jan/2011 Save pattern choice in config file.
 15/Jan/2011 Fill cells with patterns
 						Choose plain or circular fill pattern.
 01/Jan/2011 Allow marking of cell and undoing back to that point (Press 'm' to mark and 'l' to return to last mark).
